--- a/web/index.html
+++ b/web/index.html
@@ -29,10 +29,50 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>komorebi_web</title>
+  <title>Komorebi</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+  <style>
+    body {
+      height: 100vh;
+      width: 100vw;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      margin: 0;
+    }
+    .main-content {
+      height: 100vh;
+      width: 100vw;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      opacity: 1;
+      pointer-events: auto;
+      transition: opacity .4s ease-out;
+    }
+    .main-content.fade-out {
+      opacity: 0;
+      pointer-events: none;
+    }
+
+    
+
+  </style>
   <script src="flutter_bootstrap.js" async></script>
+  <div class="main-content" id="loader-content">
+    <img src="komorebi_text.png" alt="komorebi">
+    
+  </div>
+  <script>
+    window.addEventListener('flutter-first-frame', function() {
+      const loader = document.getElementById('loader-content');
+      if (loader) {
+        loader.classList.add('fade-out');
+        setTimeout(() => loader.remove(), 400);
+      }
+    });
+  </script>
 </body>
 </html>
